feat: add option to enable sorting by episode added date for Plex media server
