# backend/api-docs/swagger.yaml
@@ -188,6 +188,10 @@ definitions:
       api_token:
         description: Authentication token for accessing the media server.
         type: string
+      enable_sort_by_episode_added_date:
+        description: Whether to check episodes for added date when getting Media Items.
+          This is only for Plex servers.
+        type: boolean
       libraries:
         description: List of media server libraries to manage.
         items:
